# napari-worm

./: .gitignore  PROJECT_PLAN.md  README.md  install.ps1  install.sh  napari_worm.py  pixi.toml  pyproject.toml
napari_worm/: __init__.py  __main__.py  cli.py  model_adapter.py
napari_worm/app/: annotator.py  dual_view.py
napari_worm/geometry/: cross_section.py  lattice.py  mesh.py  ray.py  spline.py
napari_worm/io/: annotations.py  cross_section.py  volume.py
napari_worm/widgets/: event_filters.py  histogram.py  spinbox.py
