[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napari-worm"
version = "0.1.0"
description = "3D cell annotation and lattice building tool for C. elegans embryo analysis using Napari"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Diyi Chen", email = "chend@janelia.hhmi.org" },
]
keywords = ["napari", "c-elegans", "annotation", "microscopy", "shroff-lab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari>=0.4.19",
    "numpy>=1.26",
    "pandas>=2.1",
    "tifffile>=2024.1",
    "dask>=2024.1",
    "scipy>=1.10",
    "pyqtgraph>=0.13",
    "superqt>=0.6",
    "qtpy",
    "PyQt5>=5.15",
    "celegans-model[python] @ git+https://github.com/dchen116/pyShroffCelegansModels.git@add-straighten-retwist",
]

[project.scripts]
napari-worm = "napari_worm.cli:main"

[project.urls]
Repository = "https://github.com/JaneliaSciComp/napari-worm"

[tool.hatch.metadata]
# Allow PEP 508 direct refs (the celegans-model git URL above).
# Drop once celegans-model is on PyPI or ShroffLab merges PR #3.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["napari_worm"]

[tool.hatch.build.targets.sdist]
include = [
    "/napari_worm",
    "/README.md",
    "/pyproject.toml",
]
